--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </main>
     <footer class="footer">
         <p>
-            Copyright © <script>document.write(new Date().getFullYear())</script> Desire BIKORIMA
+            Copyright © <script>document.write(new Date().getFullYear())</script>KABANDA Gislain
         </p>
         <a href="#" target="_blank">
-            https://github.com/Desire-2/Calculator
+            https://github.com/keigi14/Calculator-
         </a>
     </footer>
     <script src="calculator.js" defer></script>
